--- a/simple-cart/index.html
+++ b/simple-cart/index.html
@@ -29,7 +29,11 @@
 
                 <div class="col-md-5 center-item">
                   <div class="input-group number-spinner">
-                    <button id="minusBtn1" class="btn btn-default">
+                    <button
+                      id="minusBtn1"
+                      onclick="totalCount('phone',false)"
+                      class="btn btn-default"
+                    >
                       <i class="fas fa-minus"></i>
                     </button>
                     <input
@@ -38,7 +42,11 @@
                       class="form-control text-center"
                       value="1"
                     />
-                    <button id="plusBtn1" class="btn btn-default">
+                    <button
+                      id="plusBtn1"
+                      onclick="totalCount('phone',true)"
+                      class="btn btn-default"
+                    >
                       <i class="fas fa-plus"></i>
                     </button>
                   </div>
@@ -56,7 +64,11 @@
                 </div>
                 <div class="col-md-5 center-item">
                   <div class="input-group number-spinner">
-                    <button id="minusBtn2" class="btn btn-default">
+                    <button
+                      id="minusBtn2"
+                      onclick="totalCount('case',false)"
+                      class="btn btn-default"
+                    >
                       <i class="fas fa-minus"></i>
                     </button>
                     <input
@@ -65,7 +77,11 @@
                       class="form-control text-center"
                       value="1"
                     />
-                    <button id="plusBtn2" class="btn btn-default">
+                    <button
+                      id="plusBtn2"
+                      onclick="totalCount('case',true)"
+                      class="btn btn-default"
+                    >
                       <i class="fas fa-plus"></i>
                     </button>
                   </div>
@@ -84,9 +100,9 @@
                 </div>
 
                 <div class="col-md-4 status">
-                  <h5>$ <span id="subtotal">1280</span></h5>
-                  <h5>$ <span id="tax">0</span></h5>
-                  <h5>$ <span id="total">1278</span></h5>
+                  <h5>$ <span id="subtotal">15</span></h5>
+                  <h5>$ <span id="tax">1.5</span></h5>
+                  <h5>$ <span id="total">16.5</span></h5>
                 </div>
               </div>
             </div>
