--- a/pin-matcher/index.html
+++ b/pin-matcher/index.html
@@ -43,15 +43,15 @@
                             </div>
                             <div>
                                 <button id="submit" type="submit" class="submit-btn">Submit</button>
-                                <p class="action-left">3 try left</p>
+                                <p  class="action-left"><span id="action-left">3</span> try left</p>
                             </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="notify-section">
-            <p class="notify">❌ Pin Didn't Match, Please try again</p>
-            <p class="notify">✅ Pin Matched... Secret door is opening for you</p>
+            <p id="notify-1" class="notify">❌ Pin Didn't Match, Please try again</p>
+            <p class="notify" id="notify-2">✅ Pin Matched... Secret door is opening for you</p>
         </div>
     </div>
 
